<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".view.CreateEventActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">


        <ImageButton
            android:id="@+id/event_uploader_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/event_uploader_button"
            app:layout_constraintTop_toTopOf="parent" />


        <!--       Event Picture     -->

        <ImageView
            android:id="@+id/event_poster"
            android:layout_width="363dp"
            android:layout_height="162dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.435"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_uploader_button"
            tools:srcCompat="@tools:sample/avatars" />

        <!--        Event Name-->

        <TextView
            android:id="@+id/event_label"
            android:layout_width="94dp"
            android:layout_height="29dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="367dp"
            android:text="Event Name"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_poster"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="373dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_borders"
            android:ems="10"
            android:hint="Beach Cleanup"
            android:inputType="text"
            android:maxLength="50"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_label"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="93dp"
            android:layout_height="24dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:text="Event Date"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/time"
            android:layout_width="58dp"
            android:layout_height="23dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="24dp"
            android:text="Time"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/date_label"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            tools:ignore="MissingConstraints" />


        <!--        Description-->

        <EditText
            android:id="@+id/eventTime"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/rounded_borders"
            android:ems="10"
            android:hint="13:00-15:00"
            android:inputType="none"
            android:maxLength="50"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/event_price"
            app:layout_constraintTop_toBottomOf="@+id/time" />

        <TextView
            android:id="@+id/pricetxt"
            android:layout_width="104dp"
            android:layout_height="25dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:text="Ticket Price"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            tools:ignore="MissingConstraints" />


        <!--        Description-->

        <EditText
            android:id="@+id/event_price"
            android:layout_width="63dp"
            android:layout_height="43dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="34dp"
            android:background="@drawable/rounded_borders"
            android:ems="10"
            android:gravity="center"
            android:hint="10"
            android:inputType="textLongMessage"
            android:maxLength="50"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="128dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="Event Details"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_Date"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/event_details"
            android:layout_width="373dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/rounded_borders"
            android:ems="10"
            android:hint="Provide a brief description about the event.."
            android:inputType="textMultiLine"
            android:maxLength="250"
            android:maxLines="5"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            tools:ignore="MissingConstraints" />


        <!--        Event Slots-->

        <TextView
            android:id="@+id/no_pp_accpt"
            android:layout_width="126dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="No. Event Slots "
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_details"
            tools:ignore="MissingConstraints" />


        <!--        Waitlist Capacity-->

        <EditText
            android:id="@+id/eventSlots"
            android:layout_width="63dp"
            android:layout_height="43dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_borders"
            android:ems="10"
            android:gravity="center"
            android:hint="20"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_pp_accpt"
            tools:ignore="MissingConstraints" />


        <!--        Buttons-->

        <TextView
            android:id="@+id/no_pp_accpt2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:ellipsize="none"
            android:gravity="center"
            android:maxLines="2"
            android:text="Waiting List Capacity (Optional)"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/no_pp_accpt"
            app:layout_constraintTop_toBottomOf="@+id/event_details"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/waitListCapacity"
            android:layout_width="63dp"
            android:layout_height="44dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_borders"
            android:ems="10"
            android:gravity="center"
            android:hint="40"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/eventSlots"
            app:layout_constraintTop_toBottomOf="@+id/no_pp_accpt2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="149dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="11dp"
            android:text="Cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupDeadline"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="149dp"
            android:layout_height="36dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="11dp"
            android:text="Create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelBtn"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxGeo"
            tools:ignore="MissingConstraints" />


        <!--        Geo location-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="89dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="59dp"
            android:text="No Geo Location"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signupDeadlineText"
            app:layout_constraintTop_toBottomOf="@+id/waitListCapacity" />

        <!--        Sign up details-->
        <CheckBox
            android:id="@+id/checkBoxGeo"
            android:layout_width="62dp"
            android:layout_height="52dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="88dp"
            android:buttonTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/signupDeadlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="268dp"
            android:text="Sign Up Deadline"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventSlots" />

        <Button
            android:id="@+id/event_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:text="Select Date"
            app:layout_constraintEnd_toStartOf="@+id/eventTime"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_label" />

        <Button
            android:id="@+id/signupDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:text="Select Date"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxGeo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupDeadlineText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
