...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout" />

    <!-- Date -->
    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_calendar_today_20"
        android:drawablePadding="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
...
        android:textColor="#D3D3D3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_name" />

    <!-- Time -->
    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_access_time_20"
        android:drawablePadding="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
...
